@@ -344,7 +344,7 @@ div.widget-top {
 	font-size: 13px;
 }
 
-.ui-autocomplete-start { background-position: 98% center; }	
+.ui-autocomplete-start { background-position: 99% center; }	
 
 /* SETTINGS FOR SORT GALLERY */
 
